// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`await-using-with-type-declaration.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    await     using    foo: Foo   = new Foo();
}

=====================================output=====================================
{
  await using foo: Foo = new Foo();
}

================================================================================
`;

exports[`using-with-type-declaration.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
    using     foo: Foo =    new Foo();
}

=====================================output=====================================
{
  using foo: Foo = new Foo();
}

================================================================================
`;
